add iframe status page

--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                     </td>
                   </tr>
                 </table>
+
+                <h3>Status Page</h3>
+                <iframe src="https://stats.uptimerobot.com/YyBr0hQN8"></iframe>
                </section>
             </div>
             <div class="usa-grid">
