make iframe larger

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </table>
 
                 <h3>Status Page</h3>
-                <iframe src="https://stats.uptimerobot.com/YyBr0hQN8"></iframe>
+                <iframe src="https://stats.uptimerobot.com/YyBr0hQN8" width="100%"></iframe>
                </section>
             </div>
             <div class="usa-grid">
