--- a/index.html
+++ b/index.html
@@ -192,7 +192,10 @@
                 </table>
 
                 <h3>Status Page</h3>
-                <iframe src="https://stats.uptimerobot.com/YyBr0hQN8" width="100%"></iframe>
+                <iframe src="https://stats.uptimerobot.com/YyBr0hQN8" style="width: 100%; height: 500px; background-color: transparent; border: 0px none transparent; padding: 0px; overflow: hidden;"></iframe>
+
+                <h3>Support</h3>
+                <p>To get support around the FDIC ATV Demo project, please submit a Github issue for the project repository. We are monitoring the Github issues, and will reply as soon as we possibly can.</p>
                </section>
             </div>
             <div class="usa-grid">
