--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                      url: "https://raw.githubusercontent.com/kinlane/atv/master/swagger.json",
                      dom_id: '#swagger-ui',
                      deepLinking: true,
+                     validatorUrl: null,
                      presets: [
                        SwaggerUIBundle.presets.apis,
                        SwaggerUIStandalonePreset
