--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <iframe src="https://stats.uptimerobot.com/YyBr0hQN8" style="width: 100%; height: 700px; background-color: transparent; border: 0px none transparent; padding: 0px; overflow: hidden;"></iframe>
 
                 <h3>Support</h3>
-                <p>To get support around the FDIC ATV Demo project, please submit a Github issue for the project repository. We are monitoring the Github issues, and will reply as soon as we possibly can.</p>
+                <p>To get support around the FDIC ATV Demo project, please <a href="https://github.com/api-evangelist/fdic-atv-demo/issues">submit a Github issue for the project repository</a>--we are monitoring the Github issues, will get notified via email of any submission, and will reply as soon as we possibly can.</p>
                </section>
             </div>
             <div class="usa-grid">
