--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                  </script>
 
               <h3>SDKs</h3>
-              <p>Here are the SDKs</p>
+              <p>Here are the SDKs we have created for the FDIC ATV project in eight separate languages, helping make it easier to integrate with the API.</p>
 
               <table width="100%" border="0">
                   <tr>
@@ -211,6 +211,14 @@
 
                 <h3>Support</h3>
                 <p>To get support around the FDIC ATV Demo project, please <a href="https://github.com/api-evangelist/fdic-atv-demo/issues">submit a Github issue for the project repository</a>--we are monitoring the Github issues, will get notified via email of any submission, and will reply as soon as we possibly can.</p>
+
+                <h3>Application</h3>
+                <p>See the FDIC ATV prototype application in action, and see what is possible when you develop on top of the API.</p>
+                <p><a href="https://atv1.cfapps.io/app/" target="_blank">
+                  <img src="assets/img/fdic-atv-prototype.png" width="100%" />
+                </a>
+                </p>
+
                </section>
             </div>
             <div class="usa-grid">
