add some other fluff text

--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
                 <p>To get support around the FDIC ATV Demo project, please <a href="https://github.com/api-evangelist/fdic-atv-demo/issues">submit a Github issue for the project repository</a>--we are monitoring the Github issues, will get notified via email of any submission, and will reply as soon as we possibly can.</p>
 
                 <h3>Application</h3>
-                <p>See the FDIC ATV prototype application in action, and see what is possible when you develop on top of the API.</p>
+                <p>Test drive the <a href="https://atv1.cfapps.io/app/" target="_blank">FDIC ATV prototype application</a>, and see what is possible when you develop on top of the API, and make the banking data available in your solution.</p>
                 <p><a href="https://atv1.cfapps.io/app/" target="_blank">
                   <img src="assets/img/fdic-atv-prototype.png" width="100%" />
                 </a>
                 </p>
-
+                <p>This is all a demonstration of what is possible when banking data is made available via an API, and easy to use application, complete with all the supporting building blocks to support other developers, and not just deliver a single application.</p>
                </section>
             </div>
             <div class="usa-grid">
