--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
               <table width="100%" border="0">
                   <tr>
-                    <td>
+                    <td style="border: 0px;">
                       <!--php-->
                       <a href="sdks/fdic-atv-sdk-php.zip">
                       <svg viewBox="0 0 128 128">
@@ -147,7 +147,7 @@
                       </svg>
                       </a>
                     </td>
-                    <td>
+                    <td style="border: 0px;">
                       <!--python-->
                       <a href="sdks/fdic-atv-sdk-python.zip">
                       <svg viewBox="0 0 128 128">
@@ -155,7 +155,7 @@
                       </svg>
                       </a>
                     </td>
-                    <td>
+                    <td style="border: 0px;">
                       <!--java-->
                       <a href="sdks/fdic-atv-sdk-java.zip">
                       <svg viewBox="0 0 128 128">
@@ -163,7 +163,7 @@
                       </svg>
                       </a>
                     </td>
-                    <td>
+                    <td style="border: 0px;">
                       <!-- Javascript -->
                       <a href="sdks/fdic-atv-sdk-javascript.zip">
                       <svg viewBox="0 0 128 128">
@@ -171,7 +171,7 @@
                       </svg>
                       </a>
                     </td>
-                    <td>
+                    <td style="border: 0px;">
                       <!-- Ruby -->
                       <a href="sdks/fdic-atv-sdk-ruby.zip">
                       <svg viewBox="0 0 128 128">
@@ -179,7 +179,7 @@
                       </svg>
                       </a>
                     </td>
-                    <td>
+                    <td style="border: 0px;">
                       <!--go -->
                       <a href="sdks/fdic-atv-sdk-go.zip">
                       <svg viewBox="0 0 128 128">
@@ -187,7 +187,7 @@
                       </svg>
                       </a>
                     </td>
-                    <td>
+                    <td style="border: 0px;">
                       <a href="sdks/fdic-atv-sdk-csharp.zip">
                       <!--csharp-->
                       <svg viewBox="0 0 128 128">
@@ -195,7 +195,7 @@
                       </svg>
                       </a>
                     </td>
-                    <td>
+                    <td style="border: 0px;">
                       <a href="sdks/fdic-atv-sdk-nodejs.zip">
                       <!--node.js-->
                       <svg viewBox="0 0 128 128">
