--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
       <meta name="theme-color" content="#000000">
-      <title>ATV1 Prototype App</title>
+      <title>FDIC Macro Solutions ATV Prototype Developer API</title>
       <link rel="stylesheet" href="assets/uswds/css/uswds.min.css">
       <link rel="stylesheet" href="assets/css/app.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700" rel="stylesheet">
@@ -63,14 +63,14 @@
             <div class="usa-grid">
                <section class="usa-section">
 
-                 <h3>Developer Portal</h3>
+                 <h3>FDIC Macro Solutions ATV Prototype Developer Portal</h3>
                  <p>This is the developer portal for the FDIC Macro Solutions ATV Prototype, providing a complete API solution for building applications around the banking resources, available within. Everything you need to integrate with this API is available below.</p>
 
                  <h3>Authentication</h3>
-                 <p>This API is open to the public, and doesn't currently require any authentication or API keys to access. This might change in the near future, so check back regularly if your application ceases to work.</p>
+                 <p>This API is open to the public, and doesn't currently require any authentication or API keys to access. This might change in the near future, so check back regularly if your application ceases to work. This is just a prototype, and is not considered production--please contact us for more information before you use.</p>
 
                  <h3>Base URL</h3>
-                 <p>The base URL for the API is https://atv1.cfapps.io/api/v1, with <a href="https://raw.githubusercontent.com/kinlane/atv/master/swagger.json">a full OpenAPI (fka Swagger) for the API available here, and interactive documentation available below.</a></p>
+                 <p>The base URL for the API is https://atv1.cfapps.io/api/v1, with <a href="https://raw.githubusercontent.com/kinlane/atv/master/swagger.json">a full OpenAPI (fka Swagger) for the API available here, and interactive documentation available below, providing an overview of the entire surface area for the API.</a></p>
 
                  <h3>API Documentation</h3>
                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position:absolute;width:0;height:0">
