--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
       <meta name="theme-color" content="#000000">
       <title>FDIC Macro Solutions ATV Prototype Developer API</title>
-      <link rel="stylesheet" href="assets/uswds/css/uswds.min.css">
+      <link rel="stylesheet" href="assets/uswds/css/uswds.css">
       <link rel="stylesheet" href="assets/css/app.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="assets/swagger/swagger-ui.css" >
