--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                  <p>This API is open to the public, and doesn't currently require any authentication or API keys to access. This might change in the near future, so check back regularly if your application ceases to work. This is just a prototype, and is not considered production--please contact us for more information before you use.</p>
 
                  <h3>Base URL</h3>
-                 <p>The base URL for the API is https://atv1.cfapps.io/api/v1, with <a href="https://api-evangelist.github.io/fdic-atv-demo/swagger.json">a full OpenAPI (fka Swagger) for the API available here, and interactive documentation available below, providing an overview of the entire surface area for the API.</a></p>
+                 <p>The base URL for the API is https://atv1.cfapps.io/api/v1, with <a href="https://api-evangelist.github.io/fdic-atv-demo/swagger.json">a full OpenAPI (fka Swagger) for the API available here</a>, and interactive documentation available below, providing an overview of the entire surface area for the API.</p>
 
                  <h3>API Documentation</h3>
                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position:absolute;width:0;height:0">
